syntax = "proto3";

package six1203.order.helloworld;
option go_package = "github.com/six1203/order/helloworld;helloworld";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service GreeterService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
